@@ -156,6 +156,8 @@ PIG-2228: support partial aggregation in map task (thejas)
 
 BUG FIXES
 
+PIG-2358: JobStats.getHadoopCounters() is never set and always returns null (xutingz via daijy)
+
 PIG-2384: PIG-2384: Generic Invokers should use PigContext to resolve classes (dvryaboy)
 
 PIG-2379: Bug in Schema.getPigSchema(ResourceSchema rSchema) improperly adds two level access (jcoveney via dvryaboy)
